--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="click the link to use calculator developed by Akarsh Anand Sinha">
     <meta name="keywords" content="CALCULATOR">
+    <meta name="google-site-verification" content="NIGlKj_Eeartg38eqJgNn-w0ajwhD-lczk9-xtuBNEs" />
     <meta name="author" content="Akarsh Anand Sinha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULATOR</title>
