--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="click the link to use calculator developed by Akarsh Anand Sinha">
-    <meta name="keywords" content="CALCULATOR">
+    <meta name="keywords" content="CALCULATOR,Akarsh Anand Sinha,Zelder Zen">
     <meta name="google-site-verification" content="NIGlKj_Eeartg38eqJgNn-w0ajwhD-lczk9-xtuBNEs" />
     <meta name="author" content="Akarsh Anand Sinha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
